Fix language in migration guides for firebase, supabase, and nhost

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -94,13 +94,13 @@ $cols = [
                     </li>
                     <li><a href="/docs/functions">Functions</a></li>
                     <li>
-                        <a href="/docs/migration"><i class="icon-right-dir"></i> Migration</a>
+                        <a href="/docs/migrations"><i class="icon-right-dir"></i> Migrations</a>
                         <ul class="margin-top-small margin-bottom-small">
-                            <li>&nbsp;&nbsp;<a href="/docs/migration-firebase" data-selected="/docs/migration"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Firebase</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/migration-supabase" data-selected="/docs/migration"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Supabase</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/migration-nhost" data-selected="/docs/migration"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> NHost</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/migration-cloud-to-local" data-selected="/docs/migration"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Cloud to Local</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/migration-local-to-cloud" data-selected="/docs/migration"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Local to Cloud</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/migrations-firebase" data-selected="/docs/migrations"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Firebase</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/migrations-supabase" data-selected="/docs/migrations"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Supabase</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/migrations-nhost" data-selected="/docs/migrations"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> NHost</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/migrations-cloud-to-local" data-selected="/docs/migrations"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Cloud to Local</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/migrations-local-to-cloud" data-selected="/docs/migrations"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Local to Cloud</a></li>
                     </li>
                 </ul>
 
