--- a/app/views/docs/migrations-firebase.phtml
+++ b/app/views/docs/migrations-firebase.phtml
@@ -8,10 +8,10 @@
 <h2><a href="#notices" id="notices">Things to keep in mind</a></h2>
 
 <ol class="margin-top margin-bottom-large text-size-normal">
-  <li>Appwrite will not charge usage during migrations, but Firebase may still incur service charges.</li>
-  <li>Appwrite migrations only supports Firestore as a database source. Realtime Database is currently not supported.</li>
+  <li>Appwrite will not incur usage charges during migrations, but Firebase may still incur service charges.</li>
+  <li>Appwrite Migrations only supports Firestore as a database source. Realtime Database is <b>currently not supported</b>.</li>
   <li>At the moment only top level document migration is supported. Nested documents will not be transferred automatically.</li>
-  <li>OAuth users will not be transferred. You will need to re-authenticate with your OAuth provider after the migration is complete.</li>
+  <li>OAuth users will not be transferred. Users will need to re-authenticate with your OAuth provider after the migration is complete.</li>
 </ol>
 
 <h2><a href="#resources" id="resources">Supported resource types</a></h2>
@@ -40,7 +40,7 @@
 
 <h2><a href="#migration-process" id="migration-process">Migrating to Appwrite from Firebase</a></h2>
 <p>
-  To begin migrating to Appwrite make sure to read the <a href="/docs/migration">migration overview</a> 
+  To begin migrating to Appwrite make sure to read the <a href="/docs/migrations">migration overview</a> 
   and <a href="#notices">things to keep in mind</a> sections above.
 </p>
    
