--- a/app/views/docs/migrations.phtml
+++ b/app/views/docs/migrations.phtml
@@ -1,6 +1,6 @@
 <p>
-    Moving your app from another platform to Appwrite? 
-    You can move your app from Firebase, Supabase, NHost, and even other Appwrite projects to another Appwrite project using Migrations.
+    Ready to migrate your project to Appwrite? 
+    You can move your app from Firebase, Supabase, NHost, and even move between self-hosted and Cloud projects using Migrations.
     Migrations will automatically move accounts, database documents, and storage files from one source to another.
 </p>
 
@@ -26,7 +26,7 @@
                 Firebase
             </td>
             <td>
-                <p><a href="/docs/migration-firebase"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from Firebase</a></p>
+                <p><a href="/docs/migrations-firebase"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from Firebase</a></p>
             </td>
         </tr>
         <tr>
@@ -37,7 +37,7 @@
                 Supabase
             </td>
             <td>
-                <p><a href="/docs/migration-supabase"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from Supabase</a></p>
+                <p><a href="/docs/migrations-supabase"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from Supabase</a></p>
             </td>
         </tr> 
         <tr>
@@ -48,7 +48,29 @@
                 NHost
             </td>
             <td>
-                <p><a href="/docs/migration-nhost"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from NHost</a></p>
+                <p><a href="/docs/migrations-nhost"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from NHost</a></p>
+            </td>
+        </tr>   
+        <tr>
+            <td>
+                [IMAGE]
+            </td>
+            <td>
+                Cloud to Self-host
+            </td>
+            <td>
+                <p><a href="/docs/migrations-cloud-to-local"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from Appwrite Cloud to Self-hosted</a></p>
+            </td>
+        </tr>   
+        <tr>
+            <td>
+                [IMAGE]
+            </td>
+            <td>
+                Self-host to Cloud
+            </td>
+            <td>
+                <p><a href="/docs/migrations-local-to-cloud"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Migrate from Self-hosted to Appwrite Cloud</a></p>
             </td>
         </tr>         
     </tbody>
