--- a/app/views/docs/migrations-nhost.phtml
+++ b/app/views/docs/migrations-nhost.phtml
@@ -8,7 +8,7 @@
 <h2><a href="#notices" id="notices">Things to keep in mind</a></h2>
 
 <ol class="margin-top margin-bottom-large text-size-normal">
-  <li>Appwrite will not charge usage during migrations, but NHost may still incur service charges.</li>
+  <li>Appwrite will not incur usage charges during migrations, but NHost may still incur service charges.</li>
   <li>Appwrite's Database doesn't support all the features of the postgreSQL database so more advanced postgres centric things things like advanced indexes, postgres functions and scheduling will not be migrated.</li>
   <li>OAuth users will not be transferred. You will need to re-authenticate with your OAuth provider after the migration is complete.</li>
 </ol>
@@ -39,7 +39,7 @@
 
 <h2><a href="#migration-process" id="migration-process">Migrating to Appwrite from NHost</a></h2>
 <p>
-  To begin migrating to Appwrite make sure to read the <a href="/docs/migration">migration overview</a> 
+  To begin migrating to Appwrite make sure to read the <a href="/docs/migrations">migration overview</a> 
   and <a href="#notices">things to keep in mind</a> sections above.
 </p>
    
@@ -59,28 +59,26 @@
 </ol>
 
 <h3><a href="#credentials" id="credentials">NHost Credentials</a></h3>
+<p>
+Enter all the following credentials from your NHost project.
+</p>
 <ol class="margin-top margin-bottom-large text-size-normal">
-    <li>
-        Enter all the following credentials from your NHost project.
-        <ul>
-            <li>
-                <b>Region</b> - The region your NHost project is hosted in. This can be found in your NHost project environment variables as <b>NHOST_REGION</b>.
-            </li>
-            <li>
-                <b>Subdomain</b> - The subdomain of your NHost project. This can be found in your NHost project environment variables as <b>NHOST_SUBDOMAIN</b>.
-            </li>
-            <li>
-                <b>Database</b> - The name of your NHost database. This can be found in your NHost project Database settings.
-            </li>
-            <li>
-                <b>Username</b> - The username of your NHost database. This can be found in your NHost project Database settings.
-            </li>
-            <li>
-                <b>Password</b> - The password of your NHost database. You set this when you created your NHost project, if you don't remember it you can reset it from your NHost project Database settings.
-            </li>
-            <li>
-                <b>Admin Secret</b> - The admin secret of your NHost project. This can be found in your NHost project environment variables as <b>NHOST_ADMIN_SECRET</b>. We use this to transfer your NHost Files to Appwrite.
-            </li>
-        </ul>
-    </li>
+  <li>
+      <b>Region</b> - The region your NHost project is hosted in. This can be found in your NHost project environment variables as <b>NHOST_REGION</b>.
+  </li>
+  <li>
+      <b>Subdomain</b> - The subdomain of your NHost project. This can be found in your NHost project environment variables as <b>NHOST_SUBDOMAIN</b>.
+  </li>
+  <li>
+      <b>Database</b> - The name of your NHost database. This can be found in your NHost project Database settings.
+  </li>
+  <li>
+      <b>Username</b> - The username of your NHost database. This can be found in your NHost project Database settings.
+  </li>
+  <li>
+      <b>Password</b> - The password of your NHost database. You set this when you created your NHost project, if you don't remember it you can reset it from your NHost project Database settings.
+  </li>
+  <li>
+      <b>Admin Secret</b> - The admin secret of your NHost project. This can be found in your NHost project environment variables as <b>NHOST_ADMIN_SECRET</b>. We use this to transfer your NHost files to Appwrite.
+  </li>
 </ol>
