Fixed code tags in local to cloud page

--- a/app/views/docs/migrations-local-to-cloud.phtml
+++ b/app/views/docs/migrations-local-to-cloud.phtml
@@ -6,7 +6,7 @@
 <h2><a href="#notices" id="notices">Things to keep in mind</a></h2>
 
 <ol class="margin-top margin-bottom-large text-size-normal">
-    <li>Data transferred by migrations will reset `$createdAt` and `$updatedAt` timestamps to the date of the migration.</li>
+    <li>Data transferred by migrations will reset <code>$createdAt</code> and <code>$updatedAt</code> timestamps to the date of the migration.</li>
     <li>Your self-hosted Appwrite project must be accessible from the internet for the migration to work.</li>
     <li>Migrations are non-destructive. No data will be deleted or lost in the source project.</li>
 </ol>
