Fix titles in index

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -99,8 +99,8 @@ $cols = [
                             <li>&nbsp;&nbsp;<a href="/docs/migrations-firebase" data-selected="/docs/migrations"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Firebase</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/migrations-supabase" data-selected="/docs/migrations"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Supabase</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/migrations-nhost" data-selected="/docs/migrations"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> NHost</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/migrations-cloud-to-local" data-selected="/docs/migrations"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Cloud to Local</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/migrations-local-to-cloud" data-selected="/docs/migrations"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Local to Cloud</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/migrations-cloud-to-local" data-selected="/docs/migrations"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Cloud to Self-hosted</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/migrations-local-to-cloud" data-selected="/docs/migrations"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Self-hosted to Cloud</a></li>
                     </li>
                 </ul>
 
