sell functions better in overview

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -202,58 +202,47 @@ namespace runtime {
     To fully harness the power of Appwrite Functions, explore the following features.
 </p>
 
-<h3><a href="#templates" id="templates">Templates</a></h3>
+<h3><a href="#familiar-concepts" id="familiar-concepts">Familiar Concepts</a></h3>
 <p>
-    If you need to integrate Appwrite with a third-party API or add a function for common utilities, 
-    there might already be a function template made by the Appwrite community that fits your needs. 
-    Function templates are Appwrite Functions repositories that you can clone and add to your Appwrite instance.
+    Appwrite Functions follow common HTTP concepts you already know. 
+    You can start building with minimal learning curve, without needing to learn niche concepts that don't apply elsewhere.
 </p>
 
-<p>
-<a href="/docs/[TODO]"><i class="icon-angle-circled-right"></i>Learn more about using function templates</a>
-</p>
-
-<h3><a href="#develop" id="develop">Develop</a></h3>
-<p>
-Writing Appwrite Functions should feel familiar to writing controllers in an HTTP server.
-In your function, you'll receive a request object, add transformations and logic, then return a response.
-Almost anything can be executed as code in an Appwrite Function.
-</p>
 <p>
 <a href="/docs/functions-develop"><i class="icon-angle-circled-right"></i>Learn more about developing functions</a>
 </p>
 
-<h3><a href="#deploy" id="deploy">Deploy</a></h3>
+<h3><a href="#automated-deployment" id="automated-concepts">Automated Deployment</a></h3>
 <p>
-    Appwrite Functions are designed to be maintainable and fit into a familiar development workflow.
-    You can deploy them from a GitHub repository branch or using the Appwrite CLI.
+    Appwrite Functions can be deployed automatically from GitHub.
+    Integrate Appwrite Functions seemlessly into your existing development workflow, without needing annoying CI/CD configuration.
 </p>
 <p>
-<a href="/docs/functions-deploy"><i class="icon-angle-circled-right"></i>Learn more about using deploying functions</a>
-</p>
-
-<h3><a href="#execute" id="execute">Execute</a></h3>
-<p>
-Appwrite Functions can be executed directly through a request to the API, or triggered by events, webhooks, or scheduled executions. 
-This flexible execution models unlocks many potential usecases for Appwrite functions.
-Explore using Appwrite Functions to execute a complex routine of logic, or execute background tasks on a schedule.
-</p>
-<p>
-<a href="/docs/functions-execute"><i class="icon-angle-circled-right"></i>Learn more about using executing functions</a>
+<a href="/docs/functions-deploy"><i class="icon-angle-circled-right"></i>Learn more about deploying functions</a>
 </p>
 
-<h3><a href="#runtime" id="runtime">Runtime</a></h3>
+<h3><a href="#flexible-execution" id="#flexible-execution">Flexible Execution</a></h3>
 <p>
-Appwrite supports many open-source runtimes. Find your prefered language and start writing your functions.
+    Appwrite Functions can be executed through HTTP requests, async or synchronous SDK calls, webhooks, event or scheduled triggers, and even serve webpages to browsers.
+    Integrate Appwrite with infinite possibilities through a simple function.
 </p>
 <p>
-<a href="/docs/[TODO]"><i class="icon-angle-circled-right"></i>Learn more about using runtimes</a>
+<a href="/docs/functions-deploy"><i class="icon-angle-circled-right"></i>Learn more about executing functions</a>
 </p>
-<h3><a href="#debug" id="debug">Debug</a></h3>
+
+<h3><a href="#runtimes" id="runtimes">All Your Favorite Runtimes</a></h3>
 <p>
-Let's be honest, we spend more time debugging our code than writing our code. 
-So it's important to be able to log, debug, and test your Appwrite Functions in development and production.
+    Appwrite supports a growing list of 10+ runtimes.
+    Keep your codebase simple by writing functions in a language you already work with.
 </p>
 <p>
-<a href="/docs/[TODO]"><i class="icon-angle-circled-right"></i>Learn more about debugging functions</a>
+<a href="/docs/runtimes"><i class="icon-angle-circled-right"></i>Learn more about using function runtimes</a>
+</p>
+<h3><a href="#template" id="template">Start with a Template</a></h3>
+<p>
+    Appwrite Functions has many built in templates that help you jumpstart your creativity.
+    Add integrations by using templates out of the box, or clone the template to customize and fit your needs.
+</p>
+<p>
+<a href="/docs/deploy#templates"><i class="icon-angle-circled-right"></i>Learn more about using function templates</a>
 </p>
