--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -162,6 +162,12 @@ mutation {
 </p>
 
 <p>
+<a href="/docs/authentication-anonymous"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> 
+    Manage users
+</a>
+</p>
+
+<p>
 <a href="/docs/authentication-server"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> 
     Server integrations
 </a>
