--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -88,6 +88,12 @@ $cols = [
                     <li>
                         <a href="/docs/authentication"><i class="icon-right-dir"></i> Authentication</a>
                         <ul class="margin-top-small margin-bottom-small">
+                            <li>&nbsp;&nbsp;<a href="/docs/authentication-email-pass" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Server Authentication</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/authentication-sms" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Server Authentication</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/authentication-magic" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Server Authentication</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/authentication-oauth" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Server Authentication</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/authentication-anonymous" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Server Authentication</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/authentication-management" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Server Authentication</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/authentication-server" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Server Authentication</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/authentication-security" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Security</a></li>                                                
                         </ul>
