--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -93,7 +93,7 @@ $cols = [
                             <li>&nbsp;&nbsp;<a href="/docs/authentication-magic" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Magic URL</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/authentication-oauth" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>OAuth 2</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/authentication-anonymous" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Anonymous</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/authentication-management" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Management</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/authentication-management" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>User Management</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/authentication-server" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Server Integrations</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/authentication-security" data-selected="/docs/authentication"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i>Security</a></li>                                                
                         </ul>
